--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     body{
         line-height: 1.5em;
 
-    }
+    } 
     
     }
 
@@ -65,13 +65,14 @@ body {
 
 @media only screen and (max-width: 650px) {
     h1 {
-        font-size:3vw;
+        /* font-size:3vw; */
+        font-size: max(1.5em, 12px);
     }
     h2 {
-        font-size:2.5vw;
+        font-size: max(1em,10);
     }
     h3 {
-        font-size:2vw;
+        font-size: max(0.8em, 8px);
     }
     }
 
@@ -122,8 +123,10 @@ body {
     width:100%;
     height:100%;
     object-fit: cover;
-    /* aspect-ratio: 16/9; */
+    
     }
+
+    
 
     /* This controls the grid that allows the border to overlap the main image */
     .parent {
